commit Halaman registrasi dokter perbaikan

--- a/app/src/main/res/layout/activity_halaman_registrsi_dokter.xml
+++ b/app/src/main/res/layout/activity_halaman_registrsi_dokter.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Silahkan Anda Mengisi Form Pendaftaran Dokter di Bawah Ini:"
+        android:text="Silahkan Anda Mengisi Form Pendaftaran Dokter di Bawah Ini"
         android:id="@+id/textView2"
         android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
