--- a/app/src/main/res/layout/activity_profil_pasien.xml
+++ b/app/src/main/res/layout/activity_profil_pasien.xml
@@ -26,7 +26,7 @@
             android:layout_width="243dp"
             android:layout_height="44dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Nama Dokter"
+            android:text="Nama Pasien"
             android:id="@+id/usernameView"
             android:layout_gravity="top|center_horizontal|right" />
 
