--- a/app/src/main/res/layout/activity_profil_klinik.xml
+++ b/app/src/main/res/layout/activity_profil_klinik.xml
@@ -11,8 +11,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/frameLayout"
-        android:layout_marginBottom="2dp">
+        android:id="@+id/frameLayout">
 
         <ImageView
             android:layout_width="100dp"
@@ -24,19 +23,29 @@
 
         <TextView
             android:layout_width="243dp"
-            android:layout_height="44dp"
+            android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Nama Dokter"
+            android:text="Nama Klinik"
             android:id="@+id/usernameView"
             android:layout_gravity="top|center_horizontal|right" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="34dp"
             android:text="Edit Profil"
             android:id="@+id/editProfilBtn"
             android:layout_gravity="right|bottom" />
+
+        <TextView
+            android:layout_width="243dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Jl. Jalan - Jalan"
+            android:id="@+id/textView"
+            android:layout_gravity="right|center_vertical"
+            android:textSize="13dp" />
+
     </FrameLayout>
 
     <LinearLayout
@@ -75,13 +84,13 @@
                 android:layout_height="match_parent">
 
                 <LinearLayout
-                    android:id="@+id/Jadwal"
+                    android:id="@+id/Informasi"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"></LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/Pasien"
+                    android:id="@+id/Dokter"
                     android:layout_width="298dp"
                     android:layout_height="match_parent"
                     android:orientation="vertical"></LinearLayout>
