--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,7 +63,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Login"
-        android:id="@+id/button"
+        android:id="@+id/btnLogin"
         android:layout_below="@+id/editText2"
         android:layout_centerHorizontal="true" />
 
@@ -81,7 +81,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Daftar"
-        android:id="@+id/button2"
+        android:id="@+id/btnBuat"
         android:layout_below="@+id/textView4"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
