--- a/app/src/main/res/layout/activity_pemilihan_jadwal_sukses.xml
+++ b/app/src/main/res/layout/activity_pemilihan_jadwal_sukses.xml
@@ -19,17 +19,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Nama Pasien"
-        android:id="@+id/textView15"
+        android:id="@+id/NamaPasien"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/imageView2"
-        android:layout_toEndOf="@+id/imageView2" />
+        android:layout_toStartOf="@+id/btnEditProfil"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Edit Profil"
-        android:id="@+id/button5"
+        android:id="@+id/btnEditProfil"
         android:layout_alignBottom="@+id/imageView2"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
@@ -40,7 +41,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Selamat, anda sudah masuk ke daftar antri kami:"
         android:id="@+id/textView16"
-        android:layout_below="@+id/button5"
+        android:layout_below="@+id/btnEditProfil"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="39dp" />
@@ -60,11 +61,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="dr.Udin"
-        android:id="@+id/textView18"
+        android:id="@+id/dokterdiPilih"
         android:layout_below="@+id/textView17"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -72,7 +74,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Waktu"
         android:id="@+id/textView19"
-        android:layout_below="@+id/textView18"
+        android:layout_below="@+id/dokterdiPilih"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="37dp" />
@@ -81,19 +83,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Senin, Jam 17.00"
-        android:id="@+id/textView20"
+        android:id="@+id/JamDiPilih"
         android:layout_below="@+id/textView19"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Logout"
-        android:id="@+id/button6"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/textView16"
-        android:layout_alignEnd="@+id/textView16" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
