--- a/app/src/main/res/layout/activity_registrasi_dokter.xml
+++ b/app/src/main/res/layout/activity_registrasi_dokter.xml
@@ -40,7 +40,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
+        android:id="@+id/namaDokter"
         android:layout_alignBottom="@+id/textView3"
         android:layout_alignLeft="@+id/textView"
         android:layout_alignStart="@+id/textView"
@@ -63,10 +63,10 @@
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
-        android:id="@+id/editText2"
+        android:id="@+id/TTLDokter"
         android:layout_alignBottom="@+id/textView4"
-        android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText"
+        android:layout_alignLeft="@+id/namaDokter"
+        android:layout_alignStart="@+id/namaDokter"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -85,13 +85,13 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/editText3"
+        android:id="@+id/EmailDokter"
         android:layout_alignBottom="@+id/textView5"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_toEndOf="@+id/textView6"
-        android:layout_alignLeft="@+id/editText2"
-        android:layout_alignStart="@+id/editText2" />
+        android:layout_alignLeft="@+id/TTLDokter"
+        android:layout_alignStart="@+id/TTLDokter" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -109,10 +109,10 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/editText4"
+        android:id="@+id/Spesialis"
         android:layout_alignBottom="@+id/textView6"
-        android:layout_alignLeft="@+id/editText3"
-        android:layout_alignStart="@+id/editText3"
+        android:layout_alignLeft="@+id/EmailDokter"
+        android:layout_alignStart="@+id/EmailDokter"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -132,10 +132,10 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/editText5"
+        android:id="@+id/passDokter"
         android:layout_alignBottom="@+id/textView7"
-        android:layout_alignLeft="@+id/editText4"
-        android:layout_alignStart="@+id/editText4"
+        android:layout_alignLeft="@+id/Spesialis"
+        android:layout_alignStart="@+id/Spesialis"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -155,10 +155,10 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/editText6"
+        android:id="@+id/KonfirPassDokter"
         android:layout_alignBottom="@+id/textView8"
-        android:layout_alignLeft="@+id/editText5"
-        android:layout_alignStart="@+id/editText5"
+        android:layout_alignLeft="@+id/passDokter"
+        android:layout_alignStart="@+id/passDokter"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -166,7 +166,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Registrasi"
-        android:id="@+id/button2"
+        android:id="@+id/btnRegistrasiDokter"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
