--- a/app/src/main/res/layout/activity_registrasi_klinik.xml
+++ b/app/src/main/res/layout/activity_registrasi_klinik.xml
@@ -40,7 +40,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
+        android:id="@+id/EmailLogin"
         android:layout_alignBottom="@+id/textView3"
         android:layout_alignLeft="@+id/textView"
         android:layout_alignStart="@+id/textView"
@@ -63,10 +63,10 @@
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
-        android:id="@+id/editText2"
+        android:id="@+id/PassLogin"
         android:layout_alignBottom="@+id/textView4"
-        android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText"
+        android:layout_alignLeft="@+id/EmailLogin"
+        android:layout_alignStart="@+id/EmailLogin"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -89,8 +89,8 @@
         android:layout_alignBottom="@+id/textView5"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignLeft="@+id/editText2"
-        android:layout_alignStart="@+id/editText2" />
+        android:layout_alignLeft="@+id/PassLogin"
+        android:layout_alignStart="@+id/PassLogin" />
 
     <TextView
         android:layout_width="wrap_content"
