--- a/app/src/main/res/layout/activity_registrasi_pasien.xml
+++ b/app/src/main/res/layout/activity_registrasi_pasien.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="KLINIK BAHAGIA"
-        android:id="@+id/textView15"
+        android:id="@+id/klinik_name"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
@@ -20,130 +20,147 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Silahkan Anda Mengisi Form di Bawah Ini Untuk Pendaftaran :"
-        android:id="@+id/textView18"
-        android:layout_below="@+id/textView15"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Nama"
-        android:id="@+id/textView20"
-        android:layout_below="@+id/textView18"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="36dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/namaPasien"
-        android:layout_alignBottom="@+id/textView20"
-        android:layout_alignRight="@+id/textView18"
-        android:layout_alignEnd="@+id/textView18"
+        android:id="@+id/reg_description"
+        android:layout_below="@+id/klinik_name"
         android:layout_alignLeft="@+id/textView15"
-        android:layout_alignStart="@+id/textView15" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="TTL"
-        android:id="@+id/textView29"
-        android:layout_below="@+id/textView20"
-        android:layout_marginTop="36dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/textView20"
-        android:layout_alignEnd="@+id/textView20" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/TTLPasien"
-        android:layout_alignBottom="@+id/textView29"
-        android:layout_alignLeft="@+id/namaPasien"
-        android:layout_alignStart="@+id/namaPasien"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Email"
-        android:id="@+id/textView28"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/emailPasien"
-        android:layout_alignBottom="@+id/textView28"
-        android:layout_alignRight="@+id/TTLPasien"
-        android:layout_alignEnd="@+id/TTLPasien"
-        android:layout_alignLeft="@+id/TTLPasien"
-        android:layout_alignStart="@+id/TTLPasien" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Pass"
-        android:id="@+id/textView30"
-        android:layout_below="@+id/emailPasien"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="38dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Konf.Pass"
-        android:id="@+id/textView31"
-        android:layout_below="@+id/textView30"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="38dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/passPasien"
-        android:layout_above="@+id/textView31"
-        android:layout_alignRight="@+id/emailPasien"
-        android:layout_alignEnd="@+id/emailPasien"
-        android:layout_toEndOf="@+id/textView31"
-        android:layout_alignLeft="@+id/emailPasien"
-        android:layout_alignStart="@+id/emailPasien" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/konfPassPasien"
-        android:layout_alignBottom="@+id/textView31"
-        android:layout_alignRight="@+id/passPasien"
-        android:layout_alignEnd="@+id/passPasien"
-        android:layout_toRightOf="@+id/textView31"
-        android:layout_toEndOf="@+id/textView31" />
+        android:layout_marginBottom="4dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Registrasi"
-        android:id="@+id/btnRegistrasiPasien"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="36dp" />
+        android:text="Register"
+        android:id="@+id/btn_daftar"
+        android:layout_below="@+id/linearLayout6"
+        android:layout_alignRight="@+id/linearLayout6"
+        android:layout_alignEnd="@+id/linearLayout6"
+        android:layout_marginTop="48dp" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/reg_description"
+        android:layout_toStartOf="@+id/klinik_name"
+        android:layout_alignRight="@+id/btn_daftar"
+        android:layout_alignEnd="@+id/btn_daftar"
+        android:id="@+id/linearLayout2">
+
+        <TextView
+            android:layout_width="141dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Nama"
+            android:id="@+id/view_nama_pasien" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/edit_nama_pasien"
+            android:layout_weight="1"
+            android:layout_gravity="right" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linearLayout2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/linearLayout3">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Email"
+            android:id="@+id/view_email_pasien"
+            android:layout_weight="0.46" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/edit_email_pasien"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linearLayout3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/linearLayout4">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Tgl Lahir"
+            android:id="@+id/view_tanggallahir_pas"
+            android:layout_weight="1980.59" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="date"
+            android:ems="10"
+            android:id="@+id/edit_tgllahir_pasien"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linearLayout4"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/linearLayout5">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Password"
+            android:id="@+id/view_pass_pasien"
+            android:layout_weight="7.04" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/edit_pass_pasien"
+            android:layout_weight="0.05"
+            android:password="true" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linearLayout5"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/linearLayout6">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Konf. Password"
+            android:id="@+id/view_konf_pass_pasien"
+            android:layout_weight="55.89" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/edit_konf_pass_pasien"
+            android:layout_weight="1" />
+    </LinearLayout>
 
 </RelativeLayout>
