--- a/app/src/main/res/layout-v14/activity_dokter_isi_rekam_medik.xml
+++ b/app/src/main/res/layout-v14/activity_dokter_isi_rekam_medik.xml
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Tanggal"
-            android:id="@+id/textView2"
+            android:id="@+id/view_email"
             android:layout_row="0"
             android:layout_column="0" />
 
@@ -79,7 +79,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Edit"
-                android:id="@+id/textView4" />
+                android:id="@+id/view_daftarsebagai" />
 
             <TextView
                 android:layout_width="wrap_content"
