--- a/app/src/main/res/layout/activity_dokter_tambah_rekam_medik.xml
+++ b/app/src/main/res/layout/activity_dokter_tambah_rekam_medik.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Tanggal"
-            android:id="@+id/textView2"
+            android:id="@+id/view_email"
             android:layout_row="0"
             android:layout_column="0" />
 
