--- a/app/src/main/res/layout/activity_registrasi_dokter.xml
+++ b/app/src/main/res/layout/activity_registrasi_dokter.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Silahkan Anda Mengisi Form Pendaftaran Dokter di Bawah Ini"
-        android:id="@+id/textView2"
+        android:id="@+id/view_email"
         android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -33,7 +33,7 @@
         android:text="Nama"
         android:id="@+id/textView3"
         android:layout_marginTop="37dp"
-        android:layout_below="@+id/textView2"
+        android:layout_below="@+id/view_email"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="TTL"
-        android:id="@+id/textView4"
+        android:id="@+id/view_daftarsebagai"
         android:layout_below="@+id/textView3"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -64,7 +64,7 @@
         android:inputType="textEmailAddress"
         android:ems="10"
         android:id="@+id/TTLDokter"
-        android:layout_alignBottom="@+id/textView4"
+        android:layout_alignBottom="@+id/view_daftarsebagai"
         android:layout_alignLeft="@+id/namaDokter"
         android:layout_alignStart="@+id/namaDokter"
         android:layout_alignParentRight="true"
