--- a/app/src/main/res/menu/menu_registrasi_klinik.xml
+++ b/app/src/main/res/menu/menu_registrasi_klinik.xml
@@ -1,11 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-<<<<<<< HEAD
     tools:context="id.ac.unsyiah.elektro.mobile.rekammedik.RegistrasiKlinikActivity">
-=======
-    tools:context="id.ac.unsyiah.elektro.mobile.rekammedik.RegistrasiKlinik">
->>>>>>> master
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+    <item
+        android:id="@+id/action_settings"
+        android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
